# lab_projects_2025

./: CMakeLists.txt  README.md  main.cpp
Lab_3/: CMakeLists.txt
Lab_3/Logger/: CMakeLists.txt  Logger_global.h  logger.cpp  logger.h
Lab_3/main/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_1/: main.cpp
lab_2/: CMakeLists.txt  class.cpp  class.hpp  main.cpp
